@@ -297,7 +297,12 @@ wxComboBox::GetClassDefaultAttributes(wxWindowVariant WXUNUSED(variant))
 
 void wxComboBox::Clear()
 {
-    wxTextEntry::Clear();
+    // Do not call wxTextEntry::Clear() here as it's implemented in terms of
+    // virtual SetValue() and so would call our own overridden version of this
+    // method, which wouldn't do the right thing in wxCB_READONLY case.
+    //
+    // Clear the text directly to avoid this.
+    wxTextEntry::SetValue(wxString());
     wxItemContainer::Clear();
 }
 
